# psd-character-extractor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODING_STYLE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  WEB_README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
avatar-ui/: avatar_ui.md  package-lock.json  package.json
avatar-ui/src/: App.complex.tsx  App.css  App.tsx  CleanApp.tsx  ErrorBoundary.tsx  SimpleApp.tsx  TestApp.tsx  additional-styles.css  vite-env.d.ts
avatar-ui/src/application/services/: AutoMappingService.ts
avatar-ui/src/application/use-cases/: ExportAvatarBundleUseCase.ts  LoadPSDUseCase.ts  MapSliceToSlotUseCase.ts
avatar-ui/src/components/: AvatarCanvas.tsx  SlotInspector.tsx  SlotPalette.tsx  UnmappedSlicesPanel.tsx  WardrobePanel.tsx
avatar-ui/src/config/: slot_palette.json
avatar-ui/src/domain/entities/: Avatar.ts  Slice.ts  SliceMapping.ts
avatar-ui/src/domain/repositories/: AvatarRepository.ts  PSDRepository.ts  SliceRepository.ts
avatar-ui/src/domain/value-objects/: AnchorPoint.ts  Bounds.ts  Color.ts  DrawOrder.ts  LayerPath.ts  RigId.ts  SliceId.ts  ZOffset.ts
avatar-ui/src/infrastructure/adapters/: MockPSDAdapter.ts  PSDAdapter.ts
avatar-ui/src/infrastructure/di/: Container.ts
avatar-ui/src/infrastructure/repositories/: InMemoryAvatarRepository.ts  InMemorySliceRepository.ts
avatar-ui/src/presentation/hooks/: useAvatarAssembly.ts
avatar-ui/src/schemas/: avatarSchema.ts
avatar-ui/src/types/: avatar.ts
avatar-ui/src/utils/: autoMapper.ts  bundleExporter.ts  mockPsdLoader.ts  psdLoader.ts  robustPsdLoader.ts
docs/: README.md  cli-reference.md  quick-start.md
examples/: README.md  basic_usage.py  game_development.py  vtuber_integration.py
presets/: default_rules.yaml  jp_anime_rules.yaml
runtime/pixi_demo/: README.md  index.html  main.js
schemas/: avatar.schema.json  graph.schema.json
src/psd_extractor/: __init__.py  analyzer.py  auto_mapper.py  avatar_builder.py  batch.py  cli.py  extractor.py  graph_builder.py  lipsync.py  optimizer.py  pcs_scanner.py  web_api.py
src/psd_extractor/models/: __init__.py  avatar.py  graph.py  pcs.py
src/psd_extractor/utils/: __init__.py  async_extractor.py  job_manager.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_extractor.py  test_optimizer.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: index.html
